# ebpf-monitoring

./: .gitignore  Cargo.toml  README.md  config.river  docker-compose.yaml  runqslower.skel.rs  tmp.txt
agent/: Cargo.toml  build.rs
agent/proto/google/v1/: profile.proto
agent/proto/storegateway/v1/: storegateway.proto
agent/src/: appender.rs  lib.rs  main.rs  trident.rs
agent/src/api/profile/: google.v1.rs
agent/src/common/: component.rs  label.rs  mod.rs  registry.rs
agent/src/discover/: discover.rs  docker_discovery.rs  mod.rs  network.rs
agent/src/ebpf/: args.rs  ebpf_linux.rs  metrics.rs  mod.rs
agent/src/metrics/: config.rs
agent/src/scrape/: manager.rs  mod.rs  scrape.rs  scrape_loop.rs  target.rs
agent/src/write/: metrics.rs  mod.rs  write.rs
common/: Cargo.toml  build.rs
common/proto/google/v1/: profile.proto
common/src/: error.rs  lib.rs  main.rs  profile.skel.rs
common/src/api/push/: push.v1.rs
common/src/common/: collector.rs  labels.rs  mod.rs
common/src/ebpf/: kprobe.rs  link.rs  mod.rs  perf_event.rs  reader.rs  session.rs  sync.rs  wait_group.rs
common/src/ebpf/bpf/: profile.bpf.c  profile.bpf.h  profile.skel.rs  pthread.bpf.h  pthread_amd64.h  pthread_arm64.h  pyperf.bpf.c  pyperf.skel.rs  ume.h
common/src/ebpf/cpuonline/: cpuonline.rs  mod.rs
common/src/ebpf/dwarfdump/: dwarfdump.rs
common/src/ebpf/epoll/: mod.rs  poller.rs
common/src/ebpf/metrics/: ebpf_metrics.rs  metrics.rs  mod.rs  python.rs  registry.rs  symtab.rs  write_metrics.rs
common/src/ebpf/pprof/: mod.rs  pprof.rs
common/src/ebpf/ring/: perf_event.rs  reader.rs
common/src/ebpf/sd/: container_id.rs  mod.rs  target.rs
common/src/ebpf/symtab/: elf_cache.rs  elf_module.rs  gcache.rs  kallsyms.rs  mod.rs  proc.rs  procmap.rs  stat.rs  stat_linux.rs  symbols.rs  symtab.rs  table.rs
common/src/ebpf/symtab/elf/: buildid.rs  elfmmap.rs  mod.rs  pcindex.rs  symbol_table.rs
common/src/ebpf/symtab/gosym/: mod.rs  pcindex.rs
core/: Cargo.toml
core/src/ebpf/: session.rs
core/src/ebpf/bpf/: pid.h  profile.skel.rs  ume.h
core/src/ebpf/metrics/: symtab.rs  write_metrics.rs
core/src/ebpf/pprof/: pprof.rs
core/src/ebpf/ring/: perf_buffer.rs  sys.rs
core/src/ebpf/sd/: mod.rs
core/src/ebpf/symtab/: procmap.rs  symbols.rs  symtab.rs  table.rs
iwm/: Cargo.toml  build.rs
iwm/src/: lib.rs
iwm/src/common/: collector.rs
iwm/src/ebpf/: mod.rs  session.rs  wait_group.rs
iwm/src/ebpf/bpf/: profile.bpf.c  profile.bpf.h  profile.skel.rs  pthread_amd64.h  pyoffsets.h  pyperf.bpf.c  pyperf.skel.rs  pystr.h  stacks.h
iwm/src/ebpf/cpuonline/: mod.rs
iwm/src/ebpf/dwarfdump/: dwarfdump.rs  mod.rs
iwm/src/ebpf/metrics/: python.rs
iwm/src/ebpf/pprof/: mod.rs  pprof.rs  profiles.proto  profiles.rs
iwm/src/ebpf/ring/: mod.rs  perf_buffer.rs  perf_event.rs  reader.rs  sys.rs
iwm/src/ebpf/sd/: container_id.rs  target.rs
iwm/src/ebpf/symtab/: gcache.rs  (+11 more)
proto/push/v1/: push.proto
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs
src/java/: mod.rs
src/java/asprof/: asprof.rs  extract.rs  mod.rs
test/: docker-compose.yaml  docker-compose.yml
(+8 files in other folders)
