[package]
name = "effective-waddle-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
arc-swap = "1.7.0"
libc = "0.2.153"
log = "0.4.21"
signal-hook = "0.3.17"
sha1 = "0.11.0-pre.3"
procfs = "0.16.0"
