[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
arc-swap = "1.7.0"
libc = "0.2.153"
log = "0.4.21"
signal-hook = "0.3.17"
sha1 = "0.11.0-pre.3"
prometheus-client = "0.22.2"
anyhow = "1.0.81"
async-trait = "0.1.78"
futures = "0.3.30"
hyper = "1.2.0"
prometheus = "0.13.3"
prost = "0.12.3"
tonic = "0.11.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.10.3"
common = {path = "../common"}
url = "2.5.0"
sha2 = "0.10.8"
reqwest = "0.12.2"

[build-dependencies]
tonic-build = "0.11.0"
