[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0.13.3"
log = "0.4.21"
lru = "0.12.3"
goblin = "0.8.0"
libc = "0.2.153"
rustc-demangle = "0.1.23"
byteorder = "1.5.0"
anyhow = "1.0.81"

[build-dependencies]
tonic-build = "0.11.0"
