[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0.13.3"
log = "0.4.21"
lru = "0.12.3"
goblin = "0.8.0"
libc = "0.2.153"
rustc-demangle = "0.1.23"
byteorder = "1.5.0"
anyhow = "1.0.81"
hex = "0.4.3"
thiserror = "1.0.58"
lazy_static = "1.4.0"
regex = "1.10.3"
object = "0.34.0"
gimli = "0.28.1"
flate2 = "1.0.28"
pprof = { version = "0.13.0", features = ["protobuf-codec"] }
perf-event = "0.4.8"
libbpf-cargo = "0.22.1"
libbpf-rs = "0.22.1"
epoll = "4.3.3"
aya = "0.12.0"
page_size = "0.6.0"
tracing = "0.1.40"
rustix = { version = "0.38.32", features = ["event", "time"] }
hermit-abi = "0.3.9"
polling = "3.6.0"
cfg-if = "1.0.0"
url = "2.5.0"
sha256 = "1.5.0"
sha2 = "0.10.8"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3", "xxh64"]

[dependencies.nix]
version = "0.26.4"
features = ["poll", "event"]

[build-dependencies]
libbpf-cargo = "0.22.1"
